; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-socket/src/extr_socket.c_mrb_tcpsocket_allocate.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-socket/src/extr_socket.c_mrb_tcpsocket_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i32 }
%struct.RObject = type { i32 }

@MRB_TT_OBJECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_tcpsocket_allocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_tcpsocket_allocate(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.RClass*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.RClass* @mrb_class_ptr(i32 %7)
  store %struct.RClass* %8, %struct.RClass** %5, align 8
  %9 = load %struct.RClass*, %struct.RClass** %5, align 8
  %10 = call i32 @MRB_INSTANCE_TT(%struct.RClass* %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @MRB_TT_OBJECT, align 4
  store i32 %14, i32* %6, align 4
  br label %15

15:                                               ; preds = %13, %2
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.RClass*, %struct.RClass** %5, align 8
  %19 = call i64 @mrb_obj_alloc(i32* %16, i32 %17, %struct.RClass* %18)
  %20 = inttoptr i64 %19 to %struct.RObject*
  %21 = call i32 @mrb_obj_value(%struct.RObject* %20)
  ret i32 %21
}

declare dso_local %struct.RClass* @mrb_class_ptr(i32) #1

declare dso_local i32 @MRB_INSTANCE_TT(%struct.RClass*) #1

declare dso_local i32 @mrb_obj_value(%struct.RObject*) #1

declare dso_local i64 @mrb_obj_alloc(i32*, i32, %struct.RClass*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
